# server-sentinel

./: .gitignore  AGENTS.md  PROJECT-CHARTER.md  README.md  TASKS.md  pyproject.toml  sentinel.example.toml
docs/: DEPLOYMENT.md
docs/adr/: 0001-initial-reference-runtime.md  0002-hermes-http-push-integration.md  0003-thermal-incident-severity-ladder.md
docs/sds/: ARCHITECTURE.md  AUDIT.md  CONFIGURATION.md  DOMAIN_MODEL.md  EVENTS.md  IMPLEMENTATION_PLAN.md  INTEGRATIONS.md  MONITORING.md  PLUGIN_SYSTEM.md  PRD.md  RESEARCH_NOTES.md  RUNTIME.md  SAFETY.md  SCHEDULER.md
sentinel_core/: __init__.py  __main__.py  action_audit.py  actions.py  application.py  audit.py  cli.py  config.py  events.py  hermes_client.py  plugins.py  policies.py  ports.py  runtime.py  scheduler.py  sensors.py
tests/: test_action_audit.py  test_actions.py  test_application.py  test_audit.py  test_cli.py  test_config.py  test_events.py  test_hermes_client.py  test_hermes_e2e.py  test_plugins.py  test_policies.py  test_runtime.py  test_scheduler.py  test_sensors.py
